--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,3 +9,13 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm ci
+      - run: npm test
+      - name: Install Dependencies
+        run: npm install
+      - name: Yarn Lint
+        run: yarn lint
