--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.4
+      - name: Install Dependencies
+        run: npm install
       - name: Yarn Lint
         run: yarn lint
