--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.4
       - name: Install Dependencies
-        run: npm install
+        run: yarn install
       - name: Yarn Lint
         run: yarn lint
