--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.4
+        with:
+          node-version: 20
       - name: Install Dependencies
         run: yarn install
       - name: Yarn Lint
