--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-        uses: actions/setup-node@v4.0.4
+      - uses: actions/setup-node@v4.0.4
         with:
           node-version: 20
       - name: Install Dependencies
