--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,4 +16,5 @@ jobs:
         working-directory: ./webapp
         run: yarn install
       - name: Yarn Lint
+        working-directory: ./webapp
         run: yarn lint
