--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,14 @@ jobs:
       - name: Yarn Lint
         working-directory: ./webapp
         run: yarn lint
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: ./webapp
+          push: False
+          tags: hgruben/webapp:latest
+            
